# comptext

./: AUTHORS  ChangeLog  INSTALL  Makefile.in  README  configure  configure.ac
data/: comptext.xpm  flnet.desktop
data/mac/: comptext.icns
data/win32/: fl_app.nsi
m4/: build.m4  pkg-config.m4
scripts/: build4mingw.sh  builddist.sh  buildmxe.sh  mkappbundle.sh  mknsisinst.sh
scripts/srcdoc/: doxyfile.txt
src/: Makefile.am  Makefile.in  comp_txt.cxx  comp_ui.cxx  comp_ui.fl  comptext.rc  comptext_icon.cxx  config.h.in  main.cxx
src/include/: comp_txt.h  comp_ui.h  comptext_icon.h  doxygen.h
